--- a/css/section.css
+++ b/css/section.css
@@ -13,39 +13,31 @@
   padding: 5px;
 }
 
-
 .section--bold {
   font-weight: bold;
 }
 
 .section__button {
-  background-color: hsl(180, 25%, 35%);
+  background-color: hsl(0, 0%, 83%);
   border-style: none;
   font-size: 14px;
   padding: 8px;
   margin: 5px;
-}
-
-.section__button:hover {
-  background-color: hsl(180, 25%, 40%);
+  cursor: context-menu; 
 }
 
 .section__button:active {
-  background-color: hsl(180, 25%, 45%);
+  transform: scale(1.1);
 }
 
 .section__button--link {
-  color: hsl(0, 0%, 100%);
+  color: hsl(0, 0%, 0%);
   text-decoration: none;
+  cursor: context-menu;
 }
 
-.section__button--underscore {
-  color:hsl(0, 0%, 100%);
-  background-color: hsl(180, 25%, 35%);
-  border-style: none;
-  font-size: 14px;
-  padding: 8px;
-  margin: 5px;
+.section__button--size {
+  font-size: 22px;
 }
 
 .section__span--lightslategray {
